--- a/index.html
+++ b/index.html
@@ -1,1 +1,214 @@
-429: Too Many Requests
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>물주기 사이트</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #f0f8ff;
+      font-family: 'Arial', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .container {
+      width: 100vw;
+      height: 100vh;
+      max-width: 400px;
+      max-height: 800px;
+      background-color: white;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      position: relative;
+      overflow: hidden;
+    }
+
+    #물뿌버튼 {
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      width: 100%;
+      height: auto;
+    }
+
+    #성공알림, #물다줬 {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 4;
+      display: none;
+      width: 220px;
+    }
+
+    #물방울영역 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 3;
+      pointer-events: none;
+    }
+
+    .drop {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 800px;
+      width: auto;
+      animation: fall 1.5s ease-out forwards;
+      z-index: 10;
+      pointer-events: none;
+      display: block;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(-50%) translateY(360px);
+        opacity: 0;
+      }
+    }
+
+    #totalCountDisplay {
+      position: absolute;
+      top: 10px;
+      left: 12px;
+      font-size: 30px;
+      z-index: 99;
+      font-weight: bold;
+      color: #a3dcff;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img id="timeImage" src="" class="time-image" style="position:absolute;width:100%;height:100%;object-fit:cover;z-index:0;">
+    <img class="plant-overlay" src="https://i.ibb.co/dsn0Wf9M/image.png" alt="식물" style="position:absolute;width:100%;height:100%;object-fit:cover;z-index:1;pointer-events:none;">
+    <div id="물방울영역"></div>
+    <img id="물다줬" src="https://i.ibb.co/WW8hZ4GH/image.png" alt="이미 물 줌" />
+    <img id="성공알림" src="https://i.ibb.co/jxT5RQk/image.png" alt="물 주기 성공" />
+    <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
+    <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
+    <div id="totalCountDisplay">0</div>
+  </div>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+    import { getDatabase, ref, child, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBCuDyKgkDVwptjsQ_sepxq2WylrQWd8ok",
+      authDomain: "smkug-dd359.firebaseapp.com",
+      databaseURL: "https://smkug-dd359-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "smkug-dd359",
+      storageBucket: "smkug-dd359.appspot.com",
+      messagingSenderId: "16714972126",
+      appId: "1:16714972126:web:fc40119945f5e0844d7b4f",
+      measurementId: "G-CP8X2ZQ8XC"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const countRef = ref(db, "totalCount");
+
+    const button = document.getElementById("물뿌버튼");
+    const noticeAlready = document.getElementById("물다줬");
+    const noticeSuccess = document.getElementById("성공알림");
+    const waterSound = document.getElementById("waterSound");
+    const timeImage = document.getElementById("timeImage");
+    const dropArea = document.getElementById("물방울영역");
+    const counter = document.getElementById("totalCountDisplay");
+
+    function getTodayString() {
+      const today = new Date();
+      const yyyy = today.getFullYear();
+      const mm = String(today.getMonth() + 1).padStart(2, "0");
+      const dd = String(today.getDate()).padStart(2, "0");
+      return `${yyyy}-${mm}-${dd}`;
+    }
+
+    function updateTimeImage() {
+      const hour = new Date().getHours();
+      if (hour >= 6 && hour < 9) {
+        timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+      } else if (hour >= 9 && hour < 17) {
+        timeImage.src = "https://i.ibb.co/W40tb97w/image.png";
+      } else if (hour >= 17 && hour < 20) {
+        timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+      } else {
+        timeImage.src = "https://i.ibb.co/VpPc6gW0/image.png";
+      }
+    }
+
+    function createDrop() {
+      const drop = document.createElement("img");
+      drop.src = "https://i.postimg.cc/dQWRcKBW/01.png";
+      drop.className = "drop";
+      dropArea.appendChild(drop);
+      drop.addEventListener("animationend", () => drop.remove());
+    }
+
+    onValue(countRef, (snapshot) => {
+      const count = snapshot.val() ?? 0;
+      counter.textContent = count;
+    });
+
+    let cachedIP = null;
+
+    button.addEventListener("click", async () => {
+      const lastClick = localStorage.getItem("LastClickDate");
+      const today = getTodayString();
+
+      if (lastClick === today) {
+        noticeAlready.style.display = "block";
+        setTimeout(() => { noticeAlready.style.display = "none"; }, 2000);
+        return;
+      }
+
+      try {
+        if (!cachedIP) {
+          const ipRes = await fetch("https://api.ipify.org?format=json");
+          const ipData = await ipRes.json();
+          cachedIP = ipData.ip;
+        }
+        const ip = cachedIP.replace(/\./g, "_");
+
+        const ipRef = child(ref(db), `ipLogs/${ip}`);
+        const ipSnap = await get(ipRef);
+
+        if (ipSnap.exists() && ipSnap.val() === today) {
+          noticeAlready.style.display = "block";
+          setTimeout(() => { noticeAlready.style.display = "none"; }, 2000);
+          return;
+        }
+
+        createDrop();
+        waterSound.play();
+        noticeSuccess.style.display = "block";
+        setTimeout(() => { noticeSuccess.style.display = "none"; }, 2000);
+
+        const snapshot = await get(countRef);
+        const current = snapshot.exists() ? snapshot.val() : 0;
+        await set(countRef, current + 1);
+        await set(ipRef, today);
+        localStorage.setItem("LastClickDate", today);
+      } catch (err) {
+        console.error("클릭 오류", err);
+      }
+    });
+
+    updateTimeImage();
+  </script>
+</body>
+</html>
