--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta charset="UTF-8">
   <title>물주기 사이트</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <style>
-    body { overscroll-behavior: none; }
-    * { -webkit-tap-highlight-color: transparent; }
-
     html, body {
       margin: 0;
       padding: 0;
-      min-height: 100dvh;
-      background-color: #f0f8ff;
+      background-color: #eaf6ff;
       font-family: 'Arial', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .container {
-      width: 100vw;
-      min-height: 100dvh;
-      max-width: 400px;
-      max-height: 800px;
-      background-color: white;
-      border-radius: 20px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      position: relative;
+      height: 100%;
       overflow: hidden;
     }
 
-    #물뿌버튼 {
-      position: absolute;
-      bottom: 20px;
-      left: 0;
-      width: 100%;
-      height: auto;
-      z-index: 5;
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100dvh;
     }
 
-    #성공알림, #물다줬 {
+    .card {
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+      height: 100%;
+      max-height: 800px;
+      background-color: white;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    }
+
+    .time-image, .plant-overlay {
       position: absolute;
-      top: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 6;
-      display: none;
-      width: 220px;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .plant-overlay {
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    .time-image {
+      z-index: 0;
     }
 
     #물방울영역 {
@@ -55,7 +57,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      min-height: 100dvh;
+      height: 100%;
       z-index: 3;
       pointer-events: none;
     }
@@ -84,32 +86,66 @@
       }
     }
 
+    .button-overlay {
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      z-index: 2;
+    }
+
+    #물뿌버튼 {
+      width: 90%;
+      max-width: 360px;
+      cursor: pointer;
+      transition: transform 0.1s;
+    }
+
+    #물뿌버튼:active {
+      transform: scale(0.95);
+    }
+
+    .notice-image {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 4;
+      display: none;
+      width: 220px;
+    }
+
     #totalCountDisplay {
       position: absolute;
       top: 10px;
       left: 12px;
       font-size: 30px;
-      z-index: 99;
       font-weight: bold;
       color: #a3dcff;
+      z-index: 99;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img id="timeImage" src="" class="time-image" style="position:absolute;width:100%;height:100%;object-fit:cover;z-index:0;">
-    <img class="plant-overlay" src="https://i.ibb.co/dsn0Wf9M/image.png" alt="식물" style="position:absolute;width:100%;height:100%;object-fit:cover;z-index:1;pointer-events:none;">
-    <div id="물방울영역"></div>
-    <img id="물다줬" src="https://i.ibb.co/WW8hZ4GH/image.png" alt="이미 물 줌" />
-    <img id="성공알림" src="https://i.ibb.co/jxT5RQk/image.png" alt="물 주기 성공" />
-    <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
-    <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
-    <div id="totalCountDisplay">0</div>
+    <div class="card">
+      <img id="timeImage" class="time-image" src="" alt="시간대 이미지" />
+      <img class="plant-overlay" src="https://i.ibb.co/dsn0Wf9M/image.png" alt="식물" />
+      <div id="물방울영역"></div>
+      <img id="물다줬" class="notice-image" src="https://i.ibb.co/WW8hZ4GH/image.png" alt="이미 물 줌" />
+      <img id="성공알림" class="notice-image" src="https://i.ibb.co/jxT5RQk/image.png" alt="물 주기 성공" />
+      <div class="button-overlay">
+        <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
+      </div>
+      <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
+      <div id="totalCountDisplay">0</div>
+    </div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
-    import { getDatabase, ref, child, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
+    import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBCuDyKgkDVwptjsQ_sepxq2WylrQWd8ok",
@@ -124,35 +160,27 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
+
     const countRef = ref(db, "totalCount");
-
-    const button = document.getElementById("물뿌버튼");
-    const noticeAlready = document.getElementById("물다줬");
-    const noticeSuccess = document.getElementById("성공알림");
-    const waterSound = document.getElementById("waterSound");
-    const timeImage = document.getElementById("timeImage");
-    const dropArea = document.getElementById("물방울영역");
-    const counter = document.getElementById("totalCountDisplay");
-
-    function getTodayString() {
+    const getToday = () => {
       const today = new Date();
-      const yyyy = today.getFullYear();
-      const mm = String(today.getMonth() + 1).padStart(2, "0");
-      const dd = String(today.getDate()).padStart(2, "0");
-      return `${yyyy}-${mm}-${dd}`;
-    }
+      return `${today.getFullYear()}-${today.getMonth() + 1}-${today.getDate()}`;
+    };
+
+    const display = document.getElementById("totalCountDisplay");
+    const btn = document.getElementById("물뿌버튼");
+    const waterSound = document.getElementById("waterSound");
+    const noticeSuccess = document.getElementById("성공알림");
+    const noticeAlready = document.getElementById("물다줬");
+    const dropArea = document.getElementById("물방울영역");
+    const timeImage = document.getElementById("timeImage");
 
     function updateTimeImage() {
       const hour = new Date().getHours();
-      if (hour >= 6 && hour < 9) {
-        timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
-      } else if (hour >= 9 && hour < 17) {
-        timeImage.src = "https://i.ibb.co/W40tb97w/image.png";
-      } else if (hour >= 17 && hour < 20) {
-        timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
-      } else {
-        timeImage.src = "https://i.ibb.co/VpPc6gW0/image.png";
-      }
+      if (hour >= 6 && hour < 9) timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+      else if (hour >= 9 && hour < 17) timeImage.src = "https://i.ibb.co/W40tb97w/image.png";
+      else if (hour >= 17 && hour < 20) timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+      else timeImage.src = "https://i.ibb.co/VpPc6gW0/image.png";
     }
 
     function createDrop() {
@@ -163,52 +191,29 @@
       drop.addEventListener("animationend", () => drop.remove());
     }
 
-    onValue(countRef, (snapshot) => {
-      const count = snapshot.val() ?? 0;
-      counter.textContent = count;
+    onValue(countRef, (snap) => {
+      display.textContent = snap.val() ?? 0;
     });
 
-    let cachedIP = null;
+    btn.addEventListener("click", async () => {
+      createDrop();
+      waterSound.play();
 
-    button.addEventListener("click", async () => {
-      const lastClick = localStorage.getItem("LastClickDate");
-      const today = getTodayString();
+      const ip = await fetch("https://api.ipify.org").then(res => res.text());
+      const ipRef = ref(db, `ipLogs/${ip}`);
+      const snap = await get(ipRef);
 
-      if (lastClick === today) {
-        noticeAlready.style.display = "block";
-        setTimeout(() => { noticeAlready.style.display = "none"; }, 2000);
-        return;
-      }
-
-      try {
-        if (!cachedIP) {
-          const ipRes = await fetch("https://api.ipify.org?format=json");
-          const ipData = await ipRes.json();
-          cachedIP = ipData.ip;
-        }
-        const ip = cachedIP.replace(/\./g, "_");
-
-        const ipRef = child(ref(db), `ipLogs/${ip}`);
-        const ipSnap = await get(ipRef);
-
-        if (ipSnap.exists() && ipSnap.val() === today) {
-          noticeAlready.style.display = "block";
-          setTimeout(() => { noticeAlready.style.display = "none"; }, 2000);
-          return;
-        }
-
-        createDrop();
-        waterSound.play();
+      const today = getToday();
+      if (!snap.exists() || snap.val() !== today) {
         noticeSuccess.style.display = "block";
-        setTimeout(() => { noticeSuccess.style.display = "none"; }, 2000);
-
-        const snapshot = await get(countRef);
-        const current = snapshot.exists() ? snapshot.val() : 0;
-        await set(countRef, current + 1);
-        await set(ipRef, today);
-        localStorage.setItem("LastClickDate", today);
-      } catch (err) {
-        console.error("클릭 오류", err);
+        setTimeout(() => noticeSuccess.style.display = "none", 2000);
+        set(ipRef, today);
+        const cSnap = await get(countRef);
+        const current = cSnap.exists() ? cSnap.val() : 0;
+        set(countRef, current + 1);
+      } else {
+        noticeAlready.style.display = "block";
+        setTimeout(() => noticeAlready.style.display = "none", 2000);
       }
     });
 
